# vkopter

./: .gitignore  CMakeLists.txt
data/config/: config.json
data/meshes/: 00.gltf  01.gltf  02.gltf  03.gltf  04.gltf  05.gltf  06.gltf  07.gltf  08.gltf  09.gltf  10.gltf  11.gltf  12.gltf  13.gltf  cube.glb  monkey.gltf  plane256.gltf  road-00.gltf  road-01.gltf  road-02.gltf  road-03.gltf  road-04.gltf  road-05.gltf  road-06.gltf  road-07.gltf  road-08.gltf  road-09.gltf  road-10.gltf  road-11.gltf  road-12.gltf  road-13.gltf  terrain-00.gltf  terrain-01.gltf  terrain-02.gltf  terrain-03.gltf  terrain-04.gltf  terrain-05.gltf  terrain-06.gltf  terrain-07.gltf  terrain-08.gltf  (+6 more)
data/shaders/: common.glsl
data/shaders/phong/: frag.spv  phong.frag  phong.vert  vert.spv
data/shaders/terrain/: frag.spv  terrain.frag  terrain.vert  vert.spv
data/shaders/water/: frag.spv  tesc.spv  tese.spv  vert.spv  water.frag  water.tesc  water.tese  water.vert
src/: citytest.cpp  vkopter.cpp  vulkanwindow.hpp
src/Jolt/: Jolt.natvis  LICENSE  RegisterTypes.cpp
src/Jolt/Core/: Array.h  Color.h  Core.h  JobSystemThreadPool.cpp  STLLocalAllocator.h  TempAllocator.h
src/Jolt/Geometry/: EPAPenetrationDepth.h  OrientedBox.h
src/Jolt/Physics/: PhysicsSettings.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Jolt/Physics/Body/: Body.h  BodyID.h  BodyInterface.cpp  BodyInterface.h  BodyManager.cpp
src/Jolt/Physics/Character/: Character.cpp  CharacterID.h  CharacterVirtual.h
src/Jolt/Physics/Collision/: CollideShapeVsShapePerLeaf.h  CollisionCollector.h  CollisionGroup.cpp  CollisionGroup.h  InternalEdgeRemovingCollector.h  ManifoldBetweenTwoFaces.cpp  ManifoldBetweenTwoFaces.h  NarrowPhaseQuery.cpp
src/Jolt/Physics/Collision/BroadPhase/: BroadPhaseQuadTree.cpp  QuadTree.cpp  QuadTree.h
src/Jolt/Physics/Collision/Shape/: CylinderShape.cpp  HeightFieldShape.cpp  TaperedCylinderShape.cpp
src/Jolt/Physics/Constraints/: ContactConstraintManager.cpp  ContactConstraintManager.h  HingeConstraint.cpp
src/Jolt/Physics/SoftBody/: SoftBodyMotionProperties.cpp  SoftBodyMotionProperties.h
src/Jolt/Physics/Vehicle/: VehicleAntiRollBar.h  VehicleConstraint.cpp  VehicleConstraint.h
src/game/: camera.hpp  entity.hpp  simulation.hpp  terrain.hpp
src/game/citygen/: atom.hpp  atomupdater.hpp  eventwindow.hpp  grid.hpp
src/game/entt/: entt.hpp
src/render/: light.hpp  material.hpp  memorymanager.hpp  mesh.hpp  renderobject.hpp  vertex.hpp  vk_mem_alloc.h  vulkanrenderer.hpp
src/util/: array2d.hpp  fixed_vector.hpp  read_file.hpp  stb_image.h  stb_image_write.h  tiny_gltf.hpp
